# sbr

firmware/: CMakeLists.txt  firmware.code-workspace  prj.conf
firmware/boards/: nicenano_v20_nrf52840.overlay  nrf52840dk_nrf52840.overlay
firmware/boards/arm/nicenano_v20/: Kconfig.defconfig  Kconfig.nicenano_v20
firmware/include/: balance_module.h  ble_comm.h  motors.h  mpu6050.h  periphals.h  usb_module.h
firmware/src/: ble_comm.c  main.c  motors.c  periphals.c  usb_module.c
hardware/: README.md
hardware/sbr-pcb/: charger.kicad_sch  fp-info-cache  imu.kicad_sch  mcu.kicad_sch  motor_control.kicad_sch  power_managment.kicad_sch  sbr-pcb.kicad_pcb  sbr-pcb.kicad_prl  sbr-pcb.kicad_pro  sbr-pcb.kicad_sch  ~sbr-pcb.kicad_sch.lck
hardware/sbr-pcb/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
